--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Temperature Calculator</title>
 </head>
 <body>
+    <div id="container">
+        <h2>Temperature Calculator</h2>
+        <label for="celsius">Celsius:</label>
+        <input type="text" id="celsius" placeholder="Enter temp. in Celsius">   
+        <label for="fahrenheit">Fahrenheit:</label>
+        <input type="text" id="fahrenheit" placeholder="Enter temp. in Fahrenheit">
     
+        <button id="calculate">Calculate</button>
+    
+        <div id="result"></div>
+      </div>    
     <!--script-->
     <script src="/script/code .js"></script>
 </body>
