--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <h2>Temperature Converter</h2>
-        <label for="temperature">Temperature:</label>
+        <label for="temperature"><h4>Temperature:</h4></label>
         <input type="text" id="temperature" placeholder="Enter temperature">
     
         <select id="unit">
